fix: update left menu active state for button visibility and schedule CSS.

--- a/src/style/schedular/schedular-leftpanel.css
+++ b/src/style/schedular/schedular-leftpanel.css
@@ -67,7 +67,7 @@
   list-style: none;
 }
 .Effect-Parent {
-  margin-left: -2rem;
+  margin-left: .6rem;
   margin-top: 1rem;
 }
 .Effect-Parent ul li {
